--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "recca0120/reverse-proxy",
+    "name": "recca0120/wp-reverse-proxy",
     "description": "WordPress reverse proxy plugin",
     "type": "wordpress-plugin",
     "license": "MIT",
