Add reverse proxy core implementation with TDD
- Add ReverseProxy class with PSR-18 HTTP Client
- Add integration tests using WordPress flow (go_to)
- Add implementation plan documentation
- Support wildcard route matching (/api/*)
- Hook into parse_request for request interception

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,13 @@
         }
     ],
     "require": {
-        "php": ">=7.2"
+        "php": ">=7.2",
+        "psr/http-client": "^1.0",
+        "psr/http-factory": "^1.0",
+        "nyholm/psr7": "^1.5"
     },
     "require-dev": {
+        "php-http/mock-client": "^1.6",
         "phpunit/phpunit": "^8.5 || ^9.5",
         "wp-phpunit/wp-phpunit": "^6.6",
         "yoast/phpunit-polyfills": "^2.0"
