--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "php": ">=7.2",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
+        "psr/http-message": "^1.0 || ^2.0",
+        "psr/log": "^1.0 || ^2.0 || ^3.0",
         "nyholm/psr7": "^1.5"
     },
     "require-dev": {
