--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "psr/http-message": "^1.0 || ^2.0",
         "psr/log": "^1.0 || ^2.0 || ^3.0",
         "nyholm/psr7": "^1.5",
-        "guzzlehttp/guzzle": "^7.10"
+        "php-http/discovery": "^1.20",
+        "php-http/curl-client": "^2.0"
     },
     "require-dev": {
         "php-http/mock-client": "^1.6",
