--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,7 @@
         "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0 || ^2.0",
         "psr/log": "^1.0 || ^2.0 || ^3.0",
-        "nyholm/psr7": "^1.5",
-        "php-http/discovery": "^1.20",
-        "php-http/curl-client": "^2.0"
+        "nyholm/psr7": "^1.5"
     },
     "require-dev": {
         "php-http/mock-client": "^1.6",
