--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
           rsync -av --progress . build/reverse-proxy \
             --exclude='.git' \
             --exclude='.github' \
+            --exclude='bin' \
             --exclude='build' \
             --exclude='tests' \
             --exclude='phpunit.xml' \
