--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0 || ^2.0",
         "psr/log": "^1.0 || ^2.0 || ^3.0",
-        "nyholm/psr7": "^1.5"
+        "nyholm/psr7": "^1.5",
+        "psr/simple-cache": "^1.0"
     },
     "require-dev": {
         "php-http/mock-client": "^1.6",
