--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "require-dev": {
         "php-http/mock-client": "^1.6",
         "phpunit/phpunit": "^8.5 || ^9.5",
+        "rector/rector": "^1.0 || ^2.0",
         "wp-phpunit/wp-phpunit": "^6.6",
         "yoast/phpunit-polyfills": "^2.0"
     },
