--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,6 +55,7 @@ jobs:
         if: ${{ matrix.php < '8.2' }}
         run: |
           RECTOR_TARGET_PHP=${{ matrix.php }} ./vendor/bin/rector process --no-diffs
+          git checkout composer.json
           rm -rf vendor composer.lock
 
       - name: Setup PHP ${{ matrix.php }}
