Fix Strauss updateCallSites and document namespace differences
- Fix release.yml: Change --updateCallSites from "includes,." to
  "includes,reverse-proxy.php" to prevent modifying vendor directory
- Add "Production vs Development" section explaining Strauss usage
- Update custom middleware examples with namespace notes
- Add closure alternative to avoid namespace issues

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           mkdir -p bin
           curl -o bin/strauss.phar -L https://github.com/BrianHenryIE/strauss/releases/latest/download/strauss.phar
-          php bin/strauss.phar --updateCallSites=includes,.
+          php bin/strauss.phar --updateCallSites=includes,reverse-proxy.php
           composer dump-autoload --no-dev --optimize
 
       - name: Create plugin directory
