--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,38 @@ jobs:
       - name: Install dependencies
         run: composer install --no-dev --prefer-dist --no-progress --optimize-autoloader
 
+      # === Development Version (original namespaces) ===
+      - name: Create dev plugin directory
+        run: |
+          mkdir -p build/reverse-proxy-dev
+
+          # Copy plugin files with vendor (exclude dev files)
+          rsync -av --progress . build/reverse-proxy-dev \
+            --exclude='.git' \
+            --exclude='.github' \
+            --exclude='bin' \
+            --exclude='build' \
+            --exclude='tests' \
+            --exclude='phpunit.xml' \
+            --exclude='phpunit.xml.dist' \
+            --exclude='.gitignore' \
+            --exclude='composer.json' \
+            --exclude='composer.lock' \
+            --exclude='*.md' \
+            --exclude='coverage' \
+            --exclude='.phpunit.cache' \
+            --exclude='.phpunit.result.cache'
+
+          # Keep LICENSE and essential files
+          cp LICENSE build/reverse-proxy-dev/ 2>/dev/null || true
+          cp README.md build/reverse-proxy-dev/ 2>/dev/null || true
+
+      - name: Create dev ZIP archive
+        run: |
+          cd build
+          zip -r reverse-proxy-dev.zip reverse-proxy-dev
+
+      # === Production Version (prefixed namespaces) ===
       - name: Download and run Strauss
         run: |
           mkdir -p bin
@@ -31,11 +63,11 @@ jobs:
           php bin/strauss.phar --updateCallSites=includes,reverse-proxy.php
           composer dump-autoload --no-dev --optimize
 
-      - name: Create plugin directory
+      - name: Create production plugin directory
         run: |
           mkdir -p build/reverse-proxy
 
-          # Copy plugin files (exclude dev files)
+          # Copy plugin files (exclude dev files and original vendor)
           rsync -av --progress . build/reverse-proxy \
             --exclude='.git' \
             --exclude='.github' \
@@ -57,14 +89,17 @@ jobs:
           cp LICENSE build/reverse-proxy/ 2>/dev/null || true
           cp README.md build/reverse-proxy/ 2>/dev/null || true
 
-      - name: Create ZIP archive
+      - name: Create production ZIP archive
         run: |
           cd build
           zip -r reverse-proxy.zip reverse-proxy
 
-      - name: Upload Release Asset
+      # === Upload both versions ===
+      - name: Upload Release Assets
         uses: softprops/action-gh-release@v1
         with:
-          files: build/reverse-proxy.zip
+          files: |
+            build/reverse-proxy.zip
+            build/reverse-proxy-dev.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
