Refactor: Rename FilteringClient to SanitizingClient
- Rename FilteringClient to SanitizingClient (better describes its purpose)
- Move to Http/Decorator/ subfolder to distinguish from actual HTTP clients
- Update all references in reverse-proxy.php, release.yml, and tests

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,7 +79,7 @@ jobs:
             \$classes = [
               'Recca0120\\ReverseProxy\\\\ReverseProxy',
               'Recca0120\\ReverseProxy\\\\Route',
-              'Recca0120\\ReverseProxy\\\\Http\\\\FilteringClient',
+              'Recca0120\\ReverseProxy\\\\Http\\\\Decorator\\\\SanitizingClient',
               'Recca0120\\ReverseProxy\\\\Http\\\\CurlClient',
               'Recca0120\\ReverseProxy\\\\Vendor\\\\Psr\\\\Http\\\\Client\\\\ClientInterface',
             ];
