Refactor: Use Strauss include_root_autoload for simpler autoloading
- Add include_root_autoload option to Strauss config
- Remove manual PSR-4 autoloader registration from reverse-proxy.php
- Strauss now generates autoloader that includes project namespace

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
             "classmap_prefix": "Recca0120_ReverseProxy_Vendor_",
             "constant_prefix": "RECCA0120_REVERSE_PROXY_VENDOR_",
             "delete_vendor_packages": false,
-            "delete_vendor_files": false
+            "delete_vendor_files": false,
+            "include_root_autoload": true
         }
     }
 }
