--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,8 @@
             "namespace_prefix": "Recca0120\\ReverseProxy\\Vendor\\",
             "classmap_prefix": "Recca0120_ReverseProxy_Vendor_",
             "constant_prefix": "RECCA0120_REVERSE_PROXY_VENDOR_",
-            "delete_vendor_packages": false,
-            "delete_vendor_files": false,
+            "delete_vendor_packages": true,
+            "delete_vendor_files": true,
             "include_root_autoload": true
         }
     }
