--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "psr/http-message": "^1.0 || ^2.0",
         "psr/log": "^1.0 || ^2.0 || ^3.0",
         "nyholm/psr7": "^1.5",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "symfony/yaml": "^4.4 || ^5.4 || ^6.0 || ^7.0"
     },
     "require-dev": {
         "php-http/mock-client": "^1.6",
