--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,7 @@ jobs:
             --exclude='.wordpress-test' \
             --exclude='bin' \
             --exclude='build' \
+            --exclude='docs' \
             --exclude='tests' \
             --exclude='phpunit.xml' \
             --exclude='phpunit.xml.dist' \
