--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "php-http/mock-client": "^1.6",
         "phpunit/phpunit": "^8.5 || ^9.5",
         "wp-phpunit/wp-phpunit": "^6.6",
-        "yoast/phpunit-polyfills": "^2.0",
-        "mockery/mockery": "^1.3"
+        "yoast/phpunit-polyfills": "^2.0"
     },
     "autoload": {
         "psr-4": {
