refactor: rename includes directory to src
- Follow PSR-4 convention for source directory naming
- Update composer.json autoload path
- Update phpunit.xml.dist coverage directory
- Update release.yml Strauss updateCallSites parameter

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Recca0120\\ReverseProxy\\": "includes/"
+            "Recca0120\\ReverseProxy\\": "src/"
         }
     },
     "autoload-dev": {
