--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           mkdir -p bin
           curl -o bin/strauss.phar -L https://github.com/BrianHenryIE/strauss/releases/latest/download/strauss.phar
-          php bin/strauss.phar --updateCallSites=includes,reverse-proxy.php
+          php bin/strauss.phar --updateCallSites=src,reverse-proxy.php
 
       - name: Create plugin directory
         run: |
